--- a/src/main/resources/application-testing.properties
+++ b/src/main/resources/application-testing.properties
@@ -1,5 +1,6 @@
 spring.neo4j.uri=bolt://192.168.252.45:7689
 spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=zDk#2729xbV6V
-logging.level.org.springframework.data.neo4j=DEBUG
+logging.level.org.springframework=${LOG_LEVEL}
+logging.level.com.sngular=${LOG_LEVEL}
 management.endpoints.web.exposure.include=*
