--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -1,4 +1,4 @@
-FROM amazoncorretto:20-alpine-jdk
+FROM eclipse-temurin:20-alpine
 LABEL authors="ubik team"
 COPY ./target/ubikservice-1.0.0.jar ubikservice-1.0.0.jar
 ENTRYPOINT ["java","-jar","/ubikservice-1.0.0.jar"]
