--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -1410,6 +1410,40 @@ paths:
               schema:
                 $ref: "#/components/schemas/error"
 
+  /team/{teamcode}/people:
+    get:
+      summary: Gets all the members of a team and its information
+      description: Returns a list of people
+      operationId: getTeamMembersInfo
+      parameters:
+        - name: teamcode
+          in: path
+          required: true
+          schema:
+            type: string
+          description: String that represents the code of a team
+      tags:
+        - team
+      responses:
+        '200':
+          description: A array of people
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/people"
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+
 components:
   schemas:
     project:
