--- a/infra/dockercompose.yaml
+++ b/infra/dockercompose.yaml
@@ -7,14 +7,22 @@ services:
       - 7474:7474
       - 7687:7687
     volumes:
-      - ./conf:/conf
-      - ./data:/data
-      - ./import:/import
-      - ./logs:/logs
-      - ./plugins:/plugins
+    - ./conf:/conf
+    - ./data:/data
+    - ./import:/import
+    - ./logs:/logs
+    - ./plugins:/plugins
     environment:
-      # Raise memory limits
-      - NEO4J_dbms_memory_pagecache_size=1G
-      - NEO4J_dbms.memory.heap.initial_size=1G
-      - NEO4J_dbms_memory_heap_max__size=1G
-      - NEO4J_AUTH=neo4j/neo4j_s3cr3t
+    # Raise memory limits
+    - NEO4J_dbms_memory_pagecache_size=1G
+    - NEO4J_dbms.memory.heap.initial_size=1G
+    - NEO4J_dbms_memory_heap_max__size=1G
+    - NEO4J_AUTH=neo4j/neo4j_s3cr3t
+  ubikservice:
+    image: os3/ubik/ubikservice:1.0.0
+    restart: unless-stopped
+    ports:
+    - 9080:8080
+    environment:
+    - SPRING_PROFILES_ACTIVE=testing
+    - LOG_LEVEL=INFO
