--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,10 +10,13 @@ build:
   script:
   - echo "Building..."
   - mvn $MAVEN_REMOTE_OPTS verify -DskipTests
+  - echo "POM_VERSION=$(mvn -Dexec.executable='echo' -Dexec.args='${project.version}' --non-recursive exec:exec -q)" > vars.env
   - echo "Building ended"
   artifacts:
     paths:
     - target/*.jar
+    reports:
+      dotenv: vars.env
 
 docker:
   stage: docker
@@ -33,10 +36,10 @@ docker:
   script:
   - echo "Docker Image Build Start"
   - ls target
-  - docker build -t 192.168.252.88:5000/os3/ubik/ubikservice:1.0.0 -f ./infra/Dockerfile .
+  - docker build -t 192.168.252.88:5000/os3/ubik/ubikservice:$POM_VERSION -f ./infra/Dockerfile .
   - echo "Docker Image Build End"
   - echo "Docker Image Push Start"
-  - docker push 192.168.252.88:5000/os3/ubik/ubikservice:1.0.0
+  - docker push 192.168.252.88:5000/os3/ubik/ubikservice::$POM_VERSION
   - echo "Docker Image Push End"
 
 deploy:
@@ -57,5 +60,5 @@ deploy:
   script:
   - echo "Deploy start"
   - docker rm -f ubik_service
-  - docker run --name ubik_service -e "SPRING_PROFILES_ACTIVE=testing" -e "LOG_LEVEL=INFO" --restart unless-stopped -p 9080:8080 192.168.252.88:5000/os3/ubik/ubikservice:1.0.0 -d
+  - docker run --name ubik_service -e "SPRING_PROFILES_ACTIVE=testing" -e "LOG_LEVEL=INFO" --restart unless-stopped -p 9080:8080 192.168.252.88:5000/os3/ubik/ubikservice:$POM_VERSION -d
   - echo "Deploy end" 
