--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -1,5 +1,5 @@
 ARG UBIK_SERVICE_VERSION=1.0.0
 FROM eclipse-temurin:20-alpine
 LABEL authors="ubik team"
-COPY ./target/ubikservice-$UBIK_SERVICE_VERSION.jar ubikservice-$UBIK_SERVICE_VERSION.jar
-ENTRYPOINT ["java","-jar","/ubikservice-1.0.0.jar"]
+COPY ./target/ubikservice-$UBIK_SERVICE_VERSION.jar ubikservice.jar
+ENTRYPOINT ["java","-jar","/ubikservice.jar"]
