--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ docker:
   script:
   - echo "Docker Image Build Start"
   - ls target
+  - echo $POM_VERSION
   - docker build --build-arg UBIK_SERVICE_VERSION=$POM_VERSION -t 192.168.252.88:5000/os3/ubik/ubikservice:$POM_VERSION -f ./infra/Dockerfile .
   - echo "Docker Image Build End"
   - echo "Docker Image Push Start"
