--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ docker:
   - docker build --build-arg UBIK_SERVICE_VERSION=$POM_VERSION -t 192.168.252.88:5000/os3/ubik/ubikservice:$POM_VERSION -f ./infra/Dockerfile .
   - echo "Docker Image Build End"
   - echo "Docker Image Push Start"
-  - docker push 192.168.252.88:5000/os3/ubik/ubikservice::$POM_VERSION
+  - docker push 192.168.252.88:5000/os3/ubik/ubikservice:$POM_VERSION
   - echo "Docker Image Push End"
 
 deploy:
