--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,10 @@ docker:
   - echo "Docker Image Push Start"
   - docker push 192.168.252.88:5000/os3/ubik/ubikservice:$POM_VERSION
   - echo "Docker Image Push End"
+  - echo $POM_VERSION > vars.env
+  artifacts:
+    reports:
+      dotenv: vars.env
 
 deploy:
   stage: docker
