--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -1444,6 +1444,33 @@ paths:
               schema:
                 $ref: "#/components/schemas/error"
 
+  /team/strategic:
+    get:
+      summary: Gets all the members of a team that work with strategic skills
+      description: Returns a list of people
+      operationId: getStrategicSkillsUse
+      tags:
+        - team
+      responses:
+        '200':
+          description: A array of strategic skills and the people who use them
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/strategicTeamSkill"
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+
 components:
   schemas:
     project:
@@ -1599,6 +1626,12 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/candidate"
+        assigned:
+          type: array
+          items:
+            $ref: "#/components/schemas/assignment"
+        open:
+          type: boolean
 
     patchedPosition:
       type: object
@@ -1825,8 +1858,7 @@ components:
             type: object
             properties:
               id:
-                type: integer
-                format: int64
+                type: string
               role:
                 type: string
               category:
@@ -1840,8 +1872,7 @@ components:
             type: object
             properties:
               id:
-                type: integer
-                format: int64
+                type: string
               code:
                 type: string
               level:
@@ -1961,8 +1992,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
         code:
           type: string
         comments:
@@ -1986,8 +2016,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
         role:
           type: string
         initDate:
@@ -2055,6 +2084,26 @@ components:
                 enum:
                   - DIRECTOR
                   - HEAD
+
+    strategicTeamSkill:
+      type: object
+      properties:
+        teamName:
+          type: string
+        skillList:
+          type: array
+          items:
+            $ref: "#/components/schemas/strategicUse"
+
+    strategicUse:
+      type: object
+      properties:
+        skillName:
+          type: string
+        peopleList:
+          type: array
+          items:
+            $ref: "#/components/schemas/people"
 
     error:
       type: object
