--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -766,6 +766,40 @@ paths:
               schema:
                 $ref: "#/components/schemas/error"
 
+  /person/{peoplecode}/assignments:
+    get:
+      summary: List all positions of a person that has been assigned to
+      parameters:
+        - name: peoplecode
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+          description: Long that represents the code of a person
+      operationId: getPeopleAssignedPositions
+      tags:
+        - people
+      responses:
+        '200':
+          description: A paged array of positions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/position"
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+
   /people/skills:
     get:
       summary: List of people that know all the skills given
