--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -1602,10 +1602,10 @@ components:
           type: array
           items:
             type: string
-        roles:
+        assignedPeople:
           type: array
           items:
-            $ref: "#/components/schemas/projectRoles"
+            $ref: "#/components/schemas/assignment"
 
     patchedProject:
       type: object
@@ -1637,10 +1637,6 @@ components:
           type: array
           items:
             type: string
-        roles:
-          type: array
-          items:
-            $ref: "#/components/schemas/projectRoles"
 
     guards:
       type: string
@@ -2015,6 +2011,10 @@ components:
           type: array
           items:
             type: string
+        candidacies:
+          type: array
+          items:
+            $ref: "#/components/schemas/candidate"
 
     patchedPeople:
       type: object
