--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "ProjectTFG",
-  "version": "1.0.0",
-  "homepage": "/ProjectTFG/",
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "bootstrap": "^5.3",
-    "highcharts": "^11.0.0",
-    "highcharts-react": "^3.2.0",
-    "highcharts-react-official": "^3.2.0",
-    "jquery": "^3.6.4",
-    "popper.js": "^1.16.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-intl": "^6.4.2",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.1",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-test-renderer": "^18.2.0",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080/",
-  "browserslist": [
-    "defaults"
-  ]
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
