--- a/src/main/resources/application-testing.properties
+++ b/src/main/resources/application-testing.properties
@@ -4,3 +4,4 @@ spring.neo4j.authentication.password=zDk#2729xbV6V
 logging.level.org.springframework=${LOG_LEVEL}
 logging.level.com.sngular=${LOG_LEVEL}
 management.endpoints.web.exposure.include=*
+server.port=9080
