--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-graph-vis": "^1.0.7",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-vis-graph-wrapper": "^0.1.3",
+    "styled-components": "^5.3.10",
     "vis-network": "^9.1.6",
     "web-vitals": "^2.1.4"
   },
