--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.134",
+    "@mui/material": "^5.13.6",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@syncfusion/ej2-react-navigations": "^22.1.36",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +20,7 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-vis-graph-wrapper": "^0.1.3",
-    "styled-components": "^5.3.10",
+    "styled-components": "^5.3.11",
     "vis-network": "^9.1.6",
     "web-vitals": "^2.1.4"
   },
