--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+			<version>2.3.3.RELEASE</version>
+		</dependency>
   </dependencies>
 	<dependencyManagement>
 		<dependencies>
