--- a/src/main/resources/application-testing.properties
+++ b/src/main/resources/application-testing.properties
@@ -1,6 +1,8 @@
-spring.neo4j.uri=bolt://192.168.252.45:7687
+spring.neo4j.uri=bolt://192.168.252.83:7687
 spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=zDk#2729xbV6V
 logging.level.org.springframework=${LOG_LEVEL}
 logging.level.com.sngular=${LOG_LEVEL}
 management.endpoints.web.exposure.include=*
+spring.security.oauth2.client.registration.google.client-id=<your client id>
+spring.security.oauth2.client.registration.google.client-secret=<your client secret>
