--- a/src/main/resources/application-testing.properties
+++ b/src/main/resources/application-testing.properties
@@ -4,5 +4,5 @@ spring.neo4j.authentication.password=zDk#2729xbV6V
 logging.level.org.springframework=${LOG_LEVEL}
 logging.level.com.sngular=${LOG_LEVEL}
 management.endpoints.web.exposure.include=*
-spring.security.oauth2.client.registration.google.client-id=<your client id>
-spring.security.oauth2.client.registration.google.client-secret=<your client secret>
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
