--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=neo4jtfg
 logging.level.org.springframework.data.neo4j=DEBUG
 server.port=9080
+assignable.configuration.titles=EC,DI,BM
+assignable.configuration.jobCodeList="S0002S","S0004S","S1302S","S0406S","S0419S","S0002P","S1120S","S1119M","BEL-ADM","S1115S","BL0002","S0009S"
+assignable.configuration.shortTeamNames="AFL","TG","SYS","BD","HF","HR","COM","EXCO","OPC"
