--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ build:
   stage: build
   tags:
   - maven
+  needs:
+  - node
   script:
   - echo "Building..."
   - mvn $MAVEN_REMOTE_OPTS verify -DskipTests
