--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ node:
   - echo "Building ended"
   artifacts:
     paths:
-    - frontend/public
+    - frontend/build
 
 build:
   stage: build
@@ -52,7 +52,6 @@ docker:
 
   script:
   - echo "Docker Image Build Start"
-  - ls target
   - echo $POM_VERSION
   - docker build --build-arg UBIK_SERVICE_VERSION=$POM_VERSION -t 192.168.252.88:5000/os3/ubik/ubikservice:$POM_VERSION -f ./infra/Dockerfile .
   - echo "Docker Image Build End"
