--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,10 @@ management:
     web:
       exposure:
         include: "*"
+server:
+  port: 9080
 assignable:
   configuration:
-    titles: EC,DI,BM
-    jobCodeList: "S0002S","S0004S","S1302S","S0406S","S0419S","S0002P","S1120S","S1119M","BEL-ADM","S1115S","BL0002","S0009S"
-    shortTeamNames: "AFL","TG","SYS","BD","HF","HR","COM","EXCO","OPC"
+    titles: "EC,DI,BM"
+    jobCodeList: "S0002S,S0004S,S1302S,S0406S,S0419S,S0002P,S1120S,S1119M,BEL-ADM,S1115S,BL0002,S0009S"
+    shortTeamNames: "AFL,TG,SYS,BD,HF,HR,COM,EXCO,OPC"
