--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "chroma-js": "^2.4.2",
     "date-fns": "^2.30.0",
     "lodash.debounce": "^4.0.8",
+    "nodejs": "^0.0.0",
     "react": "^18.2.0",
     "react-checkbox-tree": "^1.8.0",
     "react-datepicker": "^4.16.0",
@@ -41,7 +42,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off"
+    }
   },
   "browserslist": {
     "production": [
