--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.24</version>
+            <version>1.18.28</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -102,12 +102,12 @@
 		<dependency>
 			<groupId>jakarta.validation</groupId>
 			<artifactId>jakarta.validation-api</artifactId>
-			<version>2.0.2</version>
+            <version>3.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.11.0</version>
+            <version>2.13.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -157,7 +157,7 @@
 			<plugin>
 				<groupId>com.sngular</groupId>
 				<artifactId>scs-multiapi-maven-plugin</artifactId>
-				<version>4.9.6</version>
+                <version>4.9.7</version>
 				<executions>
 					<execution>
 						<id>openapi</id>
@@ -172,8 +172,10 @@
 									<modelPackage>com.sngular.skilltree.api.model</modelPackage>
 									<modelNameSuffix>DTO</modelNameSuffix>
 									<useLombokModelAnnotation>true</useLombokModelAnnotation>
-									</specFile>
+                                    <useTagsGroup>true</useTagsGroup>
+                                </specFile>
 							</specFiles>
+                            <springBootVersion>3</springBootVersion>
 						</configuration>
 					</execution>
 				</executions>
@@ -181,7 +183,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
+                <version>3.11.0</version>
 				<configuration>
 					<release>19</release>
 					<annotationProcessorPaths>
@@ -198,7 +200,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>1.18.24</version>
+                            <version>1.18.28</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
