--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ build:
   - node
   script:
   - echo "Building..."
-  - mvn $MAVEN_REMOTE_OPTS verify -DskipTests
+  - mvn $MAVEN_REMOTE_OPTS -U install
   - echo "POM_VERSION=$(mvn -Dexec.executable='echo' -Dexec.args='${project.version}' --non-recursive exec:exec -q)" > vars.env
   - echo "Building ended"
   artifacts:
