--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -2168,7 +2168,7 @@ components:
           type: string
         code:
           type: string
-        comments:
+        comment:
           type: string
         date:
           type: string
