--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "chroma-js": "^2.4.2",
+    "d3": "^7.8.5",
     "date-fns": "^2.30.0",
     "lodash.debounce": "^4.0.8",
     "nodejs": "^0.0.0",
@@ -25,7 +26,7 @@
     "react-graph-vis": "^1.0.7",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-select": "^5.7.4",
     "react-vis-graph-wrapper": "^0.1.3",
     "styled-components": "^6.0.4",
@@ -59,5 +60,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.0",
+    "babel-plugin-styled-components": "^2.1.4"
   }
 }
