--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -15,6 +16,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "chroma-js": "^2.4.2",
+    "core-js": "^3.32.0",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
     "lodash.debounce": "^4.0.8",
@@ -26,10 +28,10 @@
     "react-graph-vis": "^1.0.7",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.4",
     "react-vis-graph-wrapper": "^0.1.3",
-    "styled-components": "^6.0.4",
+    "uuid": "^7.0.3",
     "vis-network": "^9.1.6",
     "web-vitals": "^3.4.0"
   },
@@ -63,6 +65,13 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "babel-plugin-styled-components": "^2.1.4"
+  },
+  "resolve": {
+    "alias": {
+      "@mui/styled-engine": "@mui/styled-engine-sc"
+    }
   }
 }
